Fix #123405: Edit-mesh bridge crashes with all faces selected

Bridge could delete all faces & then fail to perform the bridge
operation. In this case the mesh was still modified.

Resolve by tracking the changed state, run updates when any changes are
made.